fixed z-index issues

--- a/mobile.css
+++ b/mobile.css
@@ -2180,6 +2180,7 @@ button:active {
   .work-section {
     left: 50%;
     transform: translateX(-50%);
+    z-index: 999;
   }
 
   .work-backg {
